# src/routes/items_lists.js
@@ -4,6 +4,7 @@ const jwt = require("../middlewares/jwt");
 
 const router = new Router();
 
+router.get("/lists/:listId/items", jwt, itemsListsController.index);
 router.post("/lists/:listId/items", jwt, itemsListsController.create);
 
 module.exports = router;
